[tool.poetry]
name = "disk_serve"
version = "0.1.0"
description = ""
authors = ["huang12zheng <huang12zheng@163.com>"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "^3.5.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
